fix(consonant-template): fix extra spacing between p and headers

--- a/templates/consonant/consonant.css
+++ b/templates/consonant/consonant.css
@@ -174,6 +174,10 @@ p {
   padding-bottom: 12px;
 }
 
+p:last-child {
+  padding-bottom: 0;
+}
+
 p:empty {
   padding: 0;
 }
